tests/NormalTests/paczka1/small_fuzzy/72049558.err
Error in line 3: 6kAp A179 7,3
Error in line 5: oRuUupAwt5y S755 4,1
Error in line 6: oRuUupAwt5y S124 80,8
Error in line 12: Biszaaf6 A179 82,6
